# FirstPrincipleAccounting

./: .gitignore  Cargo.toml  README.md  server.config.example.toml
backend/: Cargo.toml
backend/src/: app.rs  audit.rs  auth.rs  auth_provider.rs  authz.rs  books.rs  books_api.rs  config.rs  dev_artifacts.rs  error.rs  lib.rs  main.rs  sessions.rs  state.rs  users.rs
backend/tests/: auth_flow.rs  backup_restore_flow.rs  books_flow.rs  export_restore_flow.rs  workflows_flow.rs
dev_artifacts/workflows/2ef2f432-a548-4f24-87a2-8521bde76af8/: manifest.json  workflow.json
dev_artifacts/workflows/2ef2f432-a548-4f24-87a2-8521bde76af8/code/: app.js  index.html
dev_artifacts/workflows/aa954a75-7f7f-4f7f-bee2-62e625eaef9f/: manifest.json  workflow.json
dev_artifacts/workflows/aa954a75-7f7f-4f7f-bee2-62e625eaef9f/code/: app.js  index.html
docs/: LedgerZero_Impl_Plan_v1.md  LedgerZero_Impl_Spec_v1.md  LedgerZero_Manual_Verification.md  LedgerZero_Project_Plan.md  LedgerZero_Run_and_Deploy.md  LedgerZero_Spec.md  LedgerZero_Spec_Gap_Analysis.md  LedgerZero_Theorems.md
engine/: Cargo.toml
engine/src/: amount.rs  domain.rs  engine.rs  error.rs  lib.rs  storage.rs  types.rs
engine/tests/: copy_chart_and_lists.rs  engine_core.rs  export_restore.rs  property_replay.rs  storage_crash_safety.rs  workflows_and_roles.rs
engine/tests/common/: mod.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
mcp_server/: README.md  pyproject.toml
mcp_server/src/first_principle_accounting/: __init__.py  config.py  errors.py  runtime_client.py
mcp_server/src/first_principle_accounting/application/: ports.py  services.py
mcp_server/src/first_principle_accounting/cli/: __init__.py  main.py
mcp_server/src/first_principle_accounting/devtime/: __init__.py  artifacts.py  generator.py
mcp_server/src/first_principle_accounting/domain/: __init__.py  errors.py  models.py
mcp_server/src/first_principle_accounting/engine/: __init__.py  bootstrap.py  service.py
mcp_server/src/first_principle_accounting/mcp/: server.py  tools.py
mcp_server/src/first_principle_accounting/storage/: __init__.py  driver.py  file_event_store.py  locking.py  snapshots.py
mcp_server/tests/: test_artifacts.py  test_generator.py  test_imports.py  test_runtime_client.py  test_tools.py
scripts/: check.sh  demo_seed.sh  ledgerzero.service.example  package.sh
