[workspace]
resolver = "2"
members = ["engine", "backend"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["fs", "process", "rt", "macros", "sync", "io-util"] }
