[package]
name = "ledgerzero-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LedgerZero routing server + runtime backend application server"

[dependencies]
ledgerzero-engine = { path = "../engine" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
