[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "first-principle-accounting-mcp"
version = "0.1.0"
description = "MCP server and accounting engine for FirstPrincipleAccounting"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "mcp>=1.0",
]

[project.scripts]
first-principle-accounting-mcp = "first_principle_accounting.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
